static/css/profile.css
*{
    padding: 0;
    margin: 0;
}
:root{
    --bgcolor:rgba(177, 156, 31, 0.957);
    --text:rgb(34, 25, 0);
    --btn:rgba(37, 29, 0,0.9);
    --btn_text:rgb(219, 189, 107);
}
.dark-theme{
    --bgcolor:rgba(107, 87, 1, 0.979);
    --text:rgb(239, 239, 239);
    --btn:rgba(41, 29, 7, 0.65);
    --btn_text:rgb(254, 238, 206);;
    
}
.hero{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row-reverse;
}
body{
    background-color: var(--bgcolor);
    color: var(--text);
}
.photo{
    display: flex;
    align-items: center;
    justify-content: center;
    margin-right: 50px;
    flex-direction: column;
    img{
        width: 300px;
        height: 300px;
        border-radius: 50%;
    }
}
@media only screen and (max-width: 768px){
    body{
        text-align: center;
    }
    .main{
        display: flex;
        flex-direction: column;
        margin-top: 0vh;
    }
    .photo img{
        width: 150px;
        height: 150px;
    }
    .info{
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        
    }

}
h1{
    font-family: 'Brush Script MT';;
    font-size: 35px;
    letter-spacing: 2px;
}
.main{
    margin-top: 14vh;
    display: flex;
    justify-content: center;
    align-items: center;
}
.separator{
    width: 40vw;
    height: 2px;
    background-color: gray;
    border: none;
    margin-top: 15px;
    margin-bottom: 15px;
}
p{
    margin: 15px;
}
button{
    margin: 15px;
}
button{
    padding: 10px;
    background-color: var(--btn);
    color: var(--btn_text);
    border-radius: 15px;
    font-size: 20px;
}

